--- a/docker/candlepin-base/Dockerfile
+++ b/docker/candlepin-base/Dockerfile
@@ -4,16 +4,17 @@ MAINTAINER Chris Rog <crog@redhat.com>
 
 ENV LANG en_US.UTF-8
 
-ADD setup-devel-env.sh /root/
+COPY setup-db.sh /root/
+COPY setup-devel-env.sh /root/
 RUN /bin/bash /root/setup-devel-env.sh
 
 # Need a wrapper script to get proper start/stop behaviour with supervisord:
-ADD setup-supervisord.sh /root/
+COPY setup-supervisord.sh /root/
 RUN /bin/bash /root/setup-supervisord.sh
 
 # Script for actually running the tests, could theoretically move to candlepin
 # checkout for easier updating.
-ADD cp-test /usr/bin/
+COPY cp-test /usr/bin/
 
 EXPOSE 8443 22
 
