adventures in docker

--- a/docker/docker-compose-mysql.yml
+++ b/docker/docker-compose-mysql.yml
@@ -6,9 +6,9 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: password
   candlepin:
-    build: candlepin-base
+    build: candlepin-base/
     environment:
-      USING_MYSQL: true
+      USING_MYSQL: "true"
       DBHOSTNAME: db
       DBPASSWORD: password
     depends_on:
