getting mounts to work

--- a/docker/docker-compose-mysql-dev.yml
+++ b/docker/docker-compose-mysql-dev.yml
@@ -11,6 +11,8 @@ services:
       USING_MYSQL: "true"
       DBHOSTNAME: db
       DBPASSWORD: password
+    #user: "1000:1000"
+    privileged: true
     volumes:
       - ../:/candlepin-dev
     depends_on:
