trying to remove a full git clone from the image

--- a/docker/docker-compose-mysql.yml
+++ b/docker/docker-compose-mysql.yml
@@ -10,5 +10,8 @@ services:
     environment:
       USING_MYSQL: "true"
       DBHOSTNAME: db
+    privileged: true
+    volumes:
+      - ../:/candlepin-dev
     depends_on:
       - db
