--- a/docker/docker-compose-postgres.yml
+++ b/docker/docker-compose-postgres.yml
@@ -13,5 +13,8 @@ services:
       USING_POSTGRES: "true"
       DBHOSTNAME: db
       DBPASSWORD: candlepin
+    privileged: true
+    volumes:
+      - ../:/candlepin-dev
     depends_on:
       - db
