--- a/docker/candlepin-base/Dockerfile
+++ b/docker/candlepin-base/Dockerfile
@@ -4,6 +4,13 @@ MAINTAINER Chris Rog <crog@redhat.com>
 
 ENV LANG en_US.UTF-8
 
+# Copy just enough to get the deps installed, doing it this way (instead of git cloning the whole thing)
+# so that the docker layers can be cached, and thus speed up build times.
+RUN /usr/bin/mkdir /root/candlepin-deps
+ADD https://raw.githubusercontent.com/candlepin/candlepin/master/Gemfile /root/candlepin-deps/Gemfile
+ADD https://raw.githubusercontent.com/candlepin/candlepin/master/Gemfile.lock /root/candlepin-deps/Gemfile.lock
+ADD https://raw.githubusercontent.com/candlepin/candlepin/master/buildfile /root/candlepin-deps/buildfile
+
 COPY setup-devel-env.sh /root/
 RUN /bin/bash /root/setup-devel-env.sh
 
@@ -13,6 +20,7 @@ RUN /bin/bash /root/setup-supervisord.sh
 
 # Script for actually running the tests, could theoretically move to candlepin
 # checkout for easier updating.
+COPY setup-db.sh /root/
 COPY cp-test /usr/bin/
 COPY setup-db.sh /root/
 
