adventures in docker

--- a/docker/candlepin-base/Dockerfile
+++ b/docker/candlepin-base/Dockerfile
@@ -4,25 +4,22 @@ MAINTAINER Chris Rog <crog@redhat.com>
 
 ENV LANG en_US.UTF-8
 
-# Copy just enough to get the deps installed, doing it this way (instead of git cloning the whole thing)
-# so that the docker layers can be cached, and thus speed up build times.
-RUN /usr/bin/mkdir /root/candlepin-deps
-ADD https://raw.githubusercontent.com/candlepin/candlepin/master/Gemfile /root/candlepin-deps/Gemfile
-ADD https://raw.githubusercontent.com/candlepin/candlepin/master/Gemfile.lock /root/candlepin-deps/Gemfile.lock
-ADD https://raw.githubusercontent.com/candlepin/candlepin/master/buildfile /root/candlepin-deps/buildfile
-
 COPY setup-devel-env.sh /root/
-RUN /bin/bash /root/setup-devel-env.sh
+RUN /bin/bash /root/setup-devel-env.sh \
+      && /usr/bin/yum clean all \
+      && rm -rf /candlepin \
+      && /usr/bin/find /var/log/ -type f -exec cp /dev/null {} \;
 
 # Need a wrapper script to get proper start/stop behaviour with supervisord:
 COPY setup-supervisord.sh /root/
-RUN /bin/bash /root/setup-supervisord.sh
+RUN /bin/bash /root/setup-supervisord.sh \
+      && /usr/bin/yum clean all \
+      && /usr/bin/find /var/log/ -type f -exec cp /dev/null {} \;
 
 # Script for actually running the tests, could theoretically move to candlepin
 # checkout for easier updating.
 COPY setup-db.sh /root/
 COPY cp-test /usr/bin/
-COPY setup-db.sh /root/
 
 EXPOSE 8443 22
 
