--- a/docker/candlepin-base/Dockerfile
+++ b/docker/candlepin-base/Dockerfile
@@ -4,17 +4,13 @@ MAINTAINER Chris Rog <crog@redhat.com>
 
 ENV LANG en_US.UTF-8
 
+COPY dockerlib.sh /root/
 COPY setup-devel-env.sh /root/
-RUN /bin/bash /root/setup-devel-env.sh \
-      && /usr/bin/yum clean all \
-      && rm -rf /candlepin \
-      && /usr/bin/find /var/log/ -type f -exec cp /dev/null {} \;
+RUN /bin/bash /root/setup-devel-env.sh
 
 # Need a wrapper script to get proper start/stop behaviour with supervisord:
 COPY setup-supervisord.sh /root/
-RUN /bin/bash /root/setup-supervisord.sh \
-      && /usr/bin/yum clean all \
-      && /usr/bin/find /var/log/ -type f -exec cp /dev/null {} \;
+RUN /bin/bash /root/setup-supervisord.sh
 
 # Script for actually running the tests, could theoretically move to candlepin
 # checkout for easier updating.
