--- a/docker/docker-compose-oracle.yml
+++ b/docker/docker-compose-oracle.yml
@@ -2,7 +2,13 @@ version: '2'
 services:
   db:
     build: oracle/
+    #image: oracle/database:11.2.0.2-xe
+    #image: oracledb:latest
+    environment:
+      ORACLE_SID: XE
+      ORACLE_PDB: ORCLPDB1
     restart: always
+    shm_size: 1G
   candlepin:
     build: candlepin-base/
     environment:
