--- a/docker/oracle/Dockerfile
+++ b/docker/oracle/Dockerfile
@@ -1,30 +1,82 @@
-FROM centos:7
-MAINTAINER Devan Goodwin <dgoodwin@redhat.com>
+# LICENSE CDDL 1.0 + GPL 2.0
+#
+# Copyright (c) 1982-2016 Oracle and/or its affiliates. All rights reserved.
+#
+# ORACLE DOCKERFILES PROJECT
+# --------------------------
+# This is the Dockerfile for Oracle Database 11g Release 2 Express Edition
+#
+# REQUIRED FILES TO BUILD THIS IMAGE
+# ----------------------------------
+# (1) oracle-xe-11.2.0-1.0.x86_64.rpm.zip
+#     Download Oracle Database 11g Release 2 Express Edition for Linux x64
+#     from http://www.oracle.com/technetwork/database/database-technologies/express-edition/downloads/index.html
+#
+# HOW TO BUILD THIS IMAGE
+# -----------------------
+# Put the downloaded file in the same directory as this Dockerfile
+# Run:
+#      $ docker build -t oracle/database:11.2.0.2-xe .
+#
+# IMPORTANT
+# ---------
+# Oracle XE requires Docker 1.10.0 and above:
+# Oracle XE uses shared memory for MEMORY_TARGET and needs at least 1 GB.
+# Docker only supports --shm-size since Docker 1.10.0
+#
+# Pull base image
+# ---------------
+FROM oraclelinux:latest
 
-# Configure oracle:
-# TODO: move this to script later:
+# Environment variables required for this build (do NOT change)
+# -------------------------------------------------------------
+ENV ORACLE_BASE=/u01/app/oracle \
+    ORACLE_HOME=/u01/app/oracle/product/11.2.0/xe \
+    ORACLE_SID=XE \
+    INSTALL_FILE_1="oracle-xe-11.2.0-1.0.x86_64.rpm.zip" \
+    INSTALL_DIR="$HOME/install" \
+    CONFIG_RSP="xe.rsp" \
+    RUN_FILE="runOracle.sh" \
+    PWD_FILE="setPassword.sh"
 
-# This is a bit slow and expensive so we'll do it as a separate
-# layer so the setup script can be tweaked quicker:
-#RUN wget --no-verbose -r --reject 'index.html*' --no-parent -l 1 http://file.rdu.redhat.com/~dgoodwin/oracle/ -nH -nd -P /root/oracle/
-ADD http://auto-services.usersys.redhat.com/rhsm/oracle-11.2.0.4.0-1.tar.gz /root/oracle/
-RUN tar -xvf /root/oracle/oracle-11.2.0.4.0-1.tar.gz -C /root/oracle/ && rm -f /root/oracle/oracle-11.2.0.4.0-1.tar.gz
-COPY setup-supervisord.sh /root/
-COPY setup-oracle-buildtime.sh /root/
-COPY setup-oracle-runtime.sh /root/
-COPY xe.rsp /root/
-COPY launch-oracle.sh /usr/bin/
-RUN yum install -y epel-release \
-      && /usr/bin/yum clean all \
-      && /usr/bin/find /var/log/ -type f -exec cp /dev/null {} \;
-RUN /bin/bash /root/setup-supervisord.sh \
-      && /usr/bin/yum clean all \
-      && /usr/bin/find /var/log/ -type f -exec cp /dev/null {} \;
-RUN /bin/bash /root/setup-oracle-buildtime.sh \
-      && /usr/bin/yum clean all \
-      && /usr/bin/find /var/log/ -type f -exec cp /dev/null {} \;
+# Use second ENV so that variable get substituted
+ENV PATH=$ORACLE_HOME/bin:$PATH
 
-EXPOSE 8090
-EXPOSE 1521
+# Copy binaries
+# -------------
+COPY $INSTALL_FILE_1 $CONFIG_RSP $RUN_FILE $PWD_FILE $INSTALL_DIR/
 
-CMD ["/usr/bin/launch-oracle.sh"]
+# Install Oracle Express Edition
+# ------------------------------
+
+RUN yum -y install unzip libaio bc initscripts net-tools openssl && \
+    yum clean all && \
+    cd $INSTALL_DIR && \
+    unzip $INSTALL_FILE_1 && \
+    rm $INSTALL_FILE_1 &&    \
+    rpm -i Disk1/*.rpm &&    \
+    mkdir $ORACLE_BASE/oradata && \
+    chown -R oracle:dba $ORACLE_BASE && \
+    mv $INSTALL_DIR/$CONFIG_RSP $ORACLE_BASE/ && \
+    mv $INSTALL_DIR/$RUN_FILE $ORACLE_BASE/ && \
+    mv $INSTALL_DIR/$PWD_FILE $ORACLE_BASE/ && \
+    ln -s $ORACLE_BASE/$PWD_FILE / && \
+    cd $HOME && \
+    rm -rf $INSTALL_DIR && \
+    chmod u+x $ORACLE_BASE/$RUN_FILE && \
+    chmod u+x $ORACLE_BASE/$PWD_FILE
+
+RUN echo 'export PATH=$PATH' >> /etc/profile.d/oracle_profile.sh && \
+    echo 'export ORACLE_BASE=$ORACLE_BASE' >> /etc/profile.d/oracle_profile.sh && \
+    echo 'export ORACLE_HOME=$ORACLE_HOME' >> /etc/profile.d/oracle_profile.sh && \
+    echo 'export ORACLE_SID=$ORACLE_SID' >> /etc/profile.d/oracle_profile.sh && \
+    echo 'export INSTALL_FILE_1=$INSTALL_FILE_1' >> /etc/profile.d/oracle_profile.sh && \
+    echo 'export INSTALL_DIR=$INSTALL_DIR' >> /etc/profile.d/oracle_profile.sh && \
+    echo 'export CONFIG_RSP=$CONFIG_RSP' >> /etc/profile.d/oracle_profile.sh && \
+    echo 'export RUN_FILE=$RUN_FILE' >> /etc/profile.d/oracle_profile.sh && \
+    echo 'export PWD_FILE=$PWD_FILE' >> /etc/profile.d/oracle_profile.sh
+
+VOLUME ["$ORACLE_BASE/oradata"]
+EXPOSE 1521 8090
+
+CMD $ORACLE_BASE/$RUN_FILE
