--- a/profiles.yaml
+++ b/profiles.yaml
@@ -22,11 +22,11 @@ postgresql: &default
   server:
     <<: *common_server
     <<: *postgresql_static
-    jdbc_url: "jdbc:postgresql:$DB_NAME"
+    jdbc_url: "jdbc:postgresql://$DB_HOST/$DB_NAME"
   gutterball:
     <<: *common_gutterball
     <<: *postgresql_static
-    jdbc_url: "jdbc:postgresql:$DB_NAME"
+    jdbc_url: "jdbc:postgresql://$DB_HOST/$DB_NAME"
 
 # Buildr's default environment is "development" so
 # by default, go against postgresql.
@@ -41,12 +41,12 @@ oracle:
   server:
     <<: *common_server
     <<: *oracle_static
-    jdbc_url: "jdbc:oracle:thin:@//localhost:1521/XE"
+    jdbc_url: "jdbc:oracle:thin:@//$DB_HOST:1521/XE"
     password: "candlepin"
   gutterball:
     <<: *common_gutterball
     <<: *oracle_static
-    jdbc_url: "jdbc:oracle:thin:@//localhost:1521/XE"
+    jdbc_url: "jdbc:oracle:thin:@//$DB_HOST:1521/XE"
     password: "gutterball"
 
 mysql:
@@ -57,8 +57,8 @@ mysql:
   server:
     <<: *common_server
     <<: *mysql_static
-    jdbc_url: "jdbc:mysql:///$DB_NAME"
+    jdbc_url: "jdbc:mysql://$DB_HOST/$DB_NAME"
   gutterball:
     <<: *common_server
     <<: *mysql_static
-    jdbc_url: "jdbc:mysql:///$DB_NAME"
+    jdbc_url: "jdbc:mysql://$DB_HOST/$DB_NAME"
