--- a/docker/docker-compose-postgres.yml
+++ b/docker/docker-compose-postgres.yml
@@ -1,14 +1,14 @@
 version: '2'
 services:
   db:
-    image: centos/postgresql-95-centos7
+    image: postgres:9.6.2
     restart: always
     environment:
-      POSTGRESQL_USER: candlepin
-      POSTGRESQL_PASSWORD: candlepin
-      POSTGRESQL_DATABASE: candlepin
+      POSTGRES_USER: candlepin
+      POSTGRES_PASSWORD: candlepin
+      POSTGRES_DB: candlepin
+      POSTGRES_INITDB_ARGS: "--auth='ident' --auth='trust'"
   candlepin:
-    #build: candlepin-base/
     image: ${REGISTRY}/candlepin-base
     environment:
       USING_POSTGRES: "true"
