--- a/docker/docker-compose-build.yml
+++ b/docker/docker-compose-build.yml
@@ -4,11 +4,23 @@ version: '2'
 services:
   oracle_db:
     build: oracle/
-    image: ${REGISTRY}/oracle_db
+    #image: ${REGISTRY}/oracle_db
     environment:
       ORACLE_SID: XE
       ORACLE_PDB: ORCLPDB1
     shm_size: 1G
-  candlepin:
+  candlepin-base:
     build: candlepin-base/
-    image: ${REGISTRY}/candlepin-base
+    #image: ${REGISTRY}/candlepin-base
+  candlepin-rhel6-base:
+    build: candlepin-rhel6-base/
+    #image: ${REGISTRY}/candlepin-rhel6-base
+  candlepin-rhel6:
+    build: candlepin-rhel6/
+    #image: ${REGISTRY}/candlepin-rhel6
+  candlepin-rhel7-base:
+    build: candlepin-rhel7-base/
+    #image: ${REGISTRY}/candlepin-rhel7-base
+  candlepin-rhel7:
+    build: candlepin-rhel7/
+    #image: ${REGISTRY}/candlepin-rhel7
